@@ -4,6 +4,7 @@ Date: 2025-08-01
   Features:
     - Added recipe chains for biolab
     - Added additional cargo landing pad technology
+    - Added methane and carbon dioxide from atmosphere recipes
   Bugfixes:
     - Fixed some icons
     - Fixed some tech tree dependancies
